feat: integrated sample db operations
