# types/request.go
@@ -3,3 +3,8 @@ package types
 type EchoRequest struct {
 	Text string `json:"text"`
 }
+
+type UserRequest struct {
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
